--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Andy Christensen</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+   
 </head>
- 
+
 <body>
-    
-    
+    <header>
+        <div class="row">
+            <div class="col text-left">
+                <h1>Andy Christensen</h1>
+            </div>
+            <div class="col text-right">
+                <nav>
+                    <a href="#AboutMe">About Me | </a>
+                    <a href="#news">Contact | </a>
+                    <a href="#contact">Portfolio</a>
+                </nav>
+            </div>
+        </div>
+    </header>
 </body>
+<!-- Section will go here -->
+
 </html>
