--- a/index.html
+++ b/index.html
@@ -24,7 +24,33 @@
             </div>
         </div>
     </header>
+
+<div class="container">
+<h1>About Me</h1>
+<p> 
+<img src="Assets/AndyChrisensen.jpg" alt="Andy Christensen" width="100" height="120" style="float:left; margin-right: 5px">
+    
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lobortis pretium dapibus. 
+Praesent eleifend lectus nec ante sagittis rutrum. Sed et nibh nec velit porttitor lacinia a in lectus. 
+Donec aliquam convallis lectus a dignissim. Maecenas et magna vehicula, elementum augue vitae, faucibus nisl. 
+<br>
+<br>
+<br>
+Proin efficitur vitae odio sed hendrerit. Suspendisse dapibus convallis metus sit amet lacinia. 
+Duis tempus sapien in velit elementum pulvinar. In hac habitasse platea dictumst. Mauris id maximus mauris, non bibendum arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+Praesent vestibulum sagittis elit, vitae porta nulla porta ac. 
+Sed aliquam, sapien sagittis luctus lobortis, mauris elit ultrices nunc, eget efficitur nibh nisi id libero. 
+Vestibulum malesuada porta rutrum. Donec vel lacus dignissim, venenatis diam id, aliquam leo. 
+Curabitur at justo vestibulum, lacinia dolor nec, condimentum massa. Aliquam volutpat, lectus pellentesque aliquet congue, ante nibh volutpat libero, nec posuere nulla turpis a ipsum. 
+Duis a arcu id elit imperdiet vestibulum. 
+Cras et semper dui. Donec iaculis laoreet mollis. Pellentesque congue tortor augue, at tempor ligula sollicitudin vel.  
+
+</p>
+
+
+
+
 </body>
-<!-- Section will go here -->
+
 
 </html>
