--- a/index.html
+++ b/index.html
@@ -6,28 +6,37 @@
     <title>Andy Christensen</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+        body {
+            background-color: pink;
+        }
+    </style>
    
 </head>
 
 <body>
     <header>
-        <div class="row">
-            <div class="col text-left">
-                <h1>Andy Christensen</h1>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Andy Christensen</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">About <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Portfolio</a>
+                <a class="nav-item nav-link" href="#">Contact</a>
+              </div>
             </div>
-            <div class="col text-right">
-                <nav>
-                    <a href="#AboutMe">About Me | </a>
-                    <a href="#news">Contact | </a>
-                    <a href="#contact">Portfolio</a>
-                </nav>
-            </div>
-        </div>
+          </nav>
     </header>
 
-<div class="container">
-<h1>About Me</h1>
+<div class="container" style="margin: 10px">
+<h1 style="border-bottom:solid">About Me</h1>
+
 <p> 
+<br>
+<br>
 <img src="Assets/AndyChrisensen.jpg" alt="Andy Christensen" width="100" height="120" style="float:left; margin-right: 5px">
     
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lobortis pretium dapibus. 
@@ -44,8 +53,12 @@ Vestibulum malesuada porta rutrum. Donec vel lacus dignissim, venenatis diam id,
 Curabitur at justo vestibulum, lacinia dolor nec, condimentum massa. Aliquam volutpat, lectus pellentesque aliquet congue, ante nibh volutpat libero, nec posuere nulla turpis a ipsum. 
 Duis a arcu id elit imperdiet vestibulum. 
 Cras et semper dui. Donec iaculis laoreet mollis. Pellentesque congue tortor augue, at tempor ligula sollicitudin vel.  
-
 </p>
+</div>
+
+<footer style="border-top:solid; text-align:center">
+Footer information
+</footer>
 
 
 
