Cleaned up formatting of body, converted to Bootstrap Grid layout

--- a/index.html
+++ b/index.html
@@ -8,62 +8,63 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         body {
-            background-color: pink;
+            background-color: rgb(95, 90, 90);
         }
     </style>
-   
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Andy Christensen</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">About <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Portfolio</a>
-                <a class="nav-item nav-link" href="#">Contact</a>
-              </div>
-            </div>
-          </nav>
-    </header>
+  <header>
 
-<div class="container" style="margin: 10px">
-<h1 style="border-bottom:solid">About Me</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Andy Christensen</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-<p> 
-<br>
-<br>
-<img src="Assets/AndyChrisensen.jpg" alt="Andy Christensen" width="100" height="120" style="float:left; margin-right: 5px">
-    
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lobortis pretium dapibus. 
-Praesent eleifend lectus nec ante sagittis rutrum. Sed et nibh nec velit porttitor lacinia a in lectus. 
-Donec aliquam convallis lectus a dignissim. Maecenas et magna vehicula, elementum augue vitae, faucibus nisl. 
-<br>
-<br>
-<br>
-Proin efficitur vitae odio sed hendrerit. Suspendisse dapibus convallis metus sit amet lacinia. 
-Duis tempus sapien in velit elementum pulvinar. In hac habitasse platea dictumst. Mauris id maximus mauris, non bibendum arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-Praesent vestibulum sagittis elit, vitae porta nulla porta ac. 
-Sed aliquam, sapien sagittis luctus lobortis, mauris elit ultrices nunc, eget efficitur nibh nisi id libero. 
-Vestibulum malesuada porta rutrum. Donec vel lacus dignissim, venenatis diam id, aliquam leo. 
-Curabitur at justo vestibulum, lacinia dolor nec, condimentum massa. Aliquam volutpat, lectus pellentesque aliquet congue, ante nibh volutpat libero, nec posuere nulla turpis a ipsum. 
-Duis a arcu id elit imperdiet vestibulum. 
-Cras et semper dui. Donec iaculis laoreet mollis. Pellentesque congue tortor augue, at tempor ligula sollicitudin vel.  
-</p>
-</div>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">About <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Portfolio</a>
+          <a class="nav-item nav-link" href="#">Contact</a>
+        </div>
+      </div>
+    </nav>
 
-<footer style="border-top:solid; text-align:center">
-Footer information
-</footer>
+  </header>
 
+  <section class="container p-5 m-5 bg-light">
+    <div class="row">
+      <div class="col">
+        <h2 style="border-bottom:solid">About Me</h2>
+      </div>
+    </div>
 
+    <div class="row pt-3">
+      <div class="col">
+        <img src="Assets/AndyChrisensen.jpg" alt="Andy Christensen" width="120" height="150" style="float:left; margin-right: 5px"> 
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lobortis pretium dapibus. 
+          Praesent eleifend lectus nec ante sagittis rutrum. Sed et nibh nec velit porttitor lacinia a in lectus. 
+          Donec aliquam convallis lectus a dignissim. Maecenas et magna vehicula, elementum augue vitae, faucibus nisl. 
+          <br>
+          <br>
+          Proin efficitur vitae odio sed hendrerit. Suspendisse dapibus convallis metus sit amet lacinia. 
+          Duis tempus sapien in velit elementum pulvinar. In hac habitasse platea dictumst. Mauris id maximus mauris, non bibendum arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+          Praesent vestibulum sagittis elit, vitae porta nulla porta ac. 
+          Sed aliquam, sapien sagittis luctus lobortis, mauris elit ultrices nunc, eget efficitur nibh nisi id libero. 
+          Vestibulum malesuada porta rutrum. Donec vel lacus dignissim, venenatis diam id, aliquam leo. 
+          Curabitur at justo vestibulum, lacinia dolor nec, condimentum massa. Aliquam volutpat, lectus pellentesque aliquet congue, ante nibh volutpat libero, nec posuere nulla turpis a ipsum. 
+          Duis a arcu id elit imperdiet vestibulum. 
+          Cras et semper dui. Donec iaculis laoreet mollis. Pellentesque congue tortor augue, at tempor ligula sollicitudin vel.  
+        </p>
+      </div>
+    </div>
+  </section>
 
+  <footer class="fixed-bottom bg-light"style="border-top:solid; text-align:center">
+      © Andy Christensen
+  </footer>
 
 </body>
-
-
 </html>
