fixed typos, added pictures for portfolio

--- a/index.html
+++ b/index.html
@@ -44,19 +44,15 @@
       <div class="col">
         <img src="Assets/AndyChrisensen.jpg" alt="Andy Christensen" width="120" height="150" style="float:left; margin-right: 5px"> 
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut lobortis pretium dapibus. 
-          Praesent eleifend lectus nec ante sagittis rutrum. Sed et nibh nec velit porttitor lacinia a in lectus. 
-          Donec aliquam convallis lectus a dignissim. Maecenas et magna vehicula, elementum augue vitae, faucibus nisl. 
+          Hi, I'm Andy! I was born and raised in Spokane, WA, and moved to the Seattle area in 2015. Talk about the best decision of my life!
+          I am a creator at heart with passions in music, sewing, alternative fashion, cosplay, jewelry making, digital art, graphic design and now including web development.
+          I would consider myself a very "do it yourself" enthusiast, and am always trying to figure out how to design and make something my own.
           <br>
           <br>
-          Proin efficitur vitae odio sed hendrerit. Suspendisse dapibus convallis metus sit amet lacinia. 
-          Duis tempus sapien in velit elementum pulvinar. In hac habitasse platea dictumst. Mauris id maximus mauris, non bibendum arcu. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-          Praesent vestibulum sagittis elit, vitae porta nulla porta ac. 
-          Sed aliquam, sapien sagittis luctus lobortis, mauris elit ultrices nunc, eget efficitur nibh nisi id libero. 
-          Vestibulum malesuada porta rutrum. Donec vel lacus dignissim, venenatis diam id, aliquam leo. 
-          Curabitur at justo vestibulum, lacinia dolor nec, condimentum massa. Aliquam volutpat, lectus pellentesque aliquet congue, ante nibh volutpat libero, nec posuere nulla turpis a ipsum. 
-          Duis a arcu id elit imperdiet vestibulum. 
-          Cras et semper dui. Donec iaculis laoreet mollis. Pellentesque congue tortor augue, at tempor ligula sollicitudin vel.  
+          My favorite animals are cats, and I share my house with two of them. Their names are Otto and Reggie.
+          <br>
+          <br>
+          Fun fact about me: I have been DJing professionally for almost ten years.
         </p>
       </div>
     </div>
