--- a/portfolio.html
+++ b/portfolio.html
@@ -33,36 +33,32 @@
 
   </header>
 
-  <section class="container p-5 m-5 bg-light">
+  <section class="container-fluid p-5 m-5 bg-light w-75">
     <div class="row">
-      <div class="col">
+      <div class="col lg col-md col-sm col-xs">
         <h2 style="border-bottom:solid">Portfolio</h2>
       </div>
     </div>
 
     <div class="row">
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-            <img  src="Assets/Horiseon.jpg" class="mr-3" alt="Horiseon Webpage" width="350px" height="350px" style="float:center; margin: 5px">
+        <div class="col-lg col-md col-sm col-xs">
+            <img src="Assets/Horiseon.jpg" alt="Horiseon Webpage" width="350px" height="350px" style="float:center; margin: 5px">
         </div>
         
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-            <img src="Assets/andyCornLogo.jpg" class="mr-3" alt="Andy Corn Logo" width="350px" height="350px" style="float:center; margin: 5px">
+        <div class="col-lg col-md col-sm col-xs">
+            <img src="Assets/andyCornLogo.jpg" alt="Andy Corn Logo" width="350px" height="350px" style="float:center; margin: 5px">
         </div>
 
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-            <img src="Assets/ornamintLogo.jpg" class="mr-3" alt="Ornamint Logo" width="350px" height="350px" style="float:center; margin: 5px">
+        <div class="col-lg col-md col-sm col-xs">
+            <img src="Assets/ornamintLogo.jpg" alt="Ornamint Logo" width="350px" height="350px" style="float:center; margin: 5px">
         </div>
 
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-            <img src="Assets/Kirby.jpg" class="mr-3" alt="Kirby Digitial Drawing" width="350px" height="350px" style="float:center; margin: 5px">
+        <div class="col-lg col-md col-sm col-xs">
+            <img src="Assets/Kirby.jpg" alt="Kirby Digitial Drawing" width="350px" height="350px" style="float:center; margin: 5px">
         </div>
 
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-            4
-        </div>
-
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-            <img src="Assets/mimikyuCosplay.jpg" class="mr-3" alt="Mimikyu Cosplay" width="350px" height="350px" style="float:center; margin: 5px">
+        <div class="col-lg col-md col-sm col-xs">
+            <img src="Assets/mimikyuCosplay.jpg" alt="Mimikyu Cosplay" width="350px" height="350px" style="float:center; margin: 5px">
         </div>
     </div>
   </section>
