--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <section class="container p-5 m-5 bg-light">
     <div class="row">
-      <div class="col">
+      <div class="col-lg col-md col-sm col-xs">
         <h2 style="border-bottom:solid">About Me</h2>
       </div>
     </div>
