--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
 
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">About <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Portfolio</a>
-          <a class="nav-item nav-link" href="#">Contact</a>
+          <a class="nav-item nav-link" href="index.html">About</a>
+          <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-item nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
         </div>
       </div>
     </nav>
