Fixed errors after validating HTML

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 
   </header>
 
-  <section class="container-fluid p-5 m-5 bg-light w-75">
+  <section class="container p-5 m-5 bg-light w-75">
     <div class="row">
       <div class="col lg col-md col-sm col-xs">
         <h2 style="border-bottom:solid">Portfolio</h2>
@@ -42,28 +42,28 @@
 
     <div class="row">
         <div class="col-lg col-md col-sm col-xs">
-            <img src="Assets/Horiseon.jpg" alt="Horiseon Webpage" width="350px" height="350px" style="float:center; margin: 5px">
+            <img src="Assets/Horiseon.jpg" alt="Horiseon Webpage" width="300" height="300" style="margin: 5px">
         </div>
         
         <div class="col-lg col-md col-sm col-xs">
-            <img src="Assets/andyCornLogo.jpg" alt="Andy Corn Logo" width="350px" height="350px" style="float:center; margin: 5px">
+            <img src="Assets/andyCornLogo.jpg" alt="Andy Corn Logo" width="300" height="300" style="margin: 5px">
         </div>
 
         <div class="col-lg col-md col-sm col-xs">
-            <img src="Assets/ornamintLogo.jpg" alt="Ornamint Logo" width="350px" height="350px" style="float:center; margin: 5px">
+            <img src="Assets/ornamintLogo.jpg" alt="Ornamint Logo" width="300" height="300" style="margin: 5px">
         </div>
 
         <div class="col-lg col-md col-sm col-xs">
-            <img src="Assets/Kirby.jpg" alt="Kirby Digitial Drawing" width="350px" height="350px" style="float:center; margin: 5px">
+            <img src="Assets/Kirby.jpg" alt="Kirby Digitial Drawing" width="300" height="300" style="margin: 5px">
         </div>
 
         <div class="col-lg col-md col-sm col-xs">
-            <img src="Assets/mimikyuCosplay.jpg" alt="Mimikyu Cosplay" width="350px" height="350px" style="float:center; margin: 5px">
+            <img src="Assets/mimikyuCosplay.jpg" alt="Mimikyu Cosplay" width="300" height="300" style="margin: 5px">
         </div>
     </div>
   </section>
 
-  <footer class="fixed-bottom bg-light"style="border-top:solid; text-align:center">
+  <footer class="fixed-bottom bg-light" style="border-top:solid; text-align:center">
       © Andy Christensen
   </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
