Updated bootstrap responsiveness for photos on portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,23 +42,23 @@
 
     <div class="row">
         <div class="col-lg col-md col-sm col-xs">
-            <img src="Assets/Horiseon.jpg" alt="Horiseon Webpage" width="300" height="300" style="margin: 5px">
+            <img src="Assets/Horiseon.jpg" alt="Horiseon Webpage" class="img-fluid">
         </div>
         
         <div class="col-lg col-md col-sm col-xs">
-            <img src="Assets/andyCornLogo.jpg" alt="Andy Corn Logo" width="300" height="300" style="margin: 5px">
+            <img src="Assets/andyCornLogo.jpg" alt="Andy Corn Logo" class="img-fluid">
         </div>
 
         <div class="col-lg col-md col-sm col-xs">
-            <img src="Assets/ornamintLogo.jpg" alt="Ornamint Logo" width="300" height="300" style="margin: 5px">
+            <img src="Assets/ornamintLogo.jpg" alt="Ornamint Logo" class="img-fluid">
         </div>
 
         <div class="col-lg col-md col-sm col-xs">
-            <img src="Assets/Kirby.jpg" alt="Kirby Digitial Drawing" width="300" height="300" style="margin: 5px">
+            <img src="Assets/Kirby.jpg" alt="Kirby Digitial Drawing" class="img-fluid">
         </div>
 
         <div class="col-lg col-md col-sm col-xs">
-            <img src="Assets/mimikyuCosplay.jpg" alt="Mimikyu Cosplay" width="300" height="300" style="margin: 5px">
+            <img src="Assets/mimikyuCosplay.jpg" alt="Mimikyu Cosplay" class="img-fluid">
         </div>
     </div>
   </section>
